generics, some compilation warnings, few PMD tips